[metadata]
name = discordn
version = attr: discordn.__version__
description = Discord N
long_description = file: README.md
long_description_content_type = text/markdown
author = Natalie Fearnley
author_email = nfearnley@gmail.com
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
keywords = discord
project_urls =
    Source=https://github.com/sizedev/discordn
    Tracker=https://github.com/sizedev/discordn/issues

[options]
packages = find:
python_requires = >=3.8
zip_safe = yes
include_package_data = True
install_requires =
    discord.py==1.5.1

[options.extras_require]
dev =
    flake8==3.8.4
    autopep8==1.5.5

[flake8]
ignore = E501,W503
per-file-ignores =
    */__init__.py:F401
